FAV-4 support extension definition: primitives